[package]
name = "apvd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
approx = "0.5.1"
console_error_panic_hook = "0.1.7"
derive_more = "0.99.17"
itertools = "0.11.0"
log = "0.4.20"
nalgebra = { version = "0.32.3" }
num-dual = { version = "0.7.1" }
num-traits = "0.2.16"
ordered-float = "4.1.0"
polars = { version = "0.33.2", features = [ "csv" ] }
roots = "0.0.8"
serde = { version = "1.0.183", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
thiserror = "1.0.49"
tsify = "0.4.5"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-bindgen-console-logger = "0.1.1"
web-sys = { version = "0.3.50", features = ["console"] }

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.12"
