[package]
name = "apvd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
approx = "0.5"
console_error_panic_hook = "0.1"
derive_more = "0.99"  # 2.x has breaking changes
itertools = "0.14"
log = "0.4"
nalgebra = { version = "0.32" }  # 0.33+ has breaking changes with num-dual
num-dual = { version = "0.7" }  # 0.13 has breaking API changes
num-traits = "0.2"
ordered-float = "4"
roots = "0.0.8"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "1.0"  # 2.x has breaking changes
tsify = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-console-logger = "0.1"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
env_logger = "0.10"
polars = { version = "0.44", default-features = false, features = ["csv"] }  # 0.52 has breaking changes
test-log = "0.2"
