[workspace]
resolver = "2"
members = [
    "apvd-core",
    "apvd-wasm",
    "apvd-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Core dependencies (shared)
anyhow = "1.0"
approx = "0.5"
derive_more = "0.99"  # 2.x has breaking changes
itertools = "0.14"
log = "0.4"
nalgebra = "0.32"  # 0.33+ has breaking changes with num-dual
num-dual = "0.7"  # 0.13 has breaking API changes
num-traits = "0.2"
ordered-float = "4"
roots = "0.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"  # 2.x has breaking changes

# WASM dependencies
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"
tsify = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-console-logger = "0.1"
web-sys = { version = "0.3", features = ["console"] }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
rand = "0.8"
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
rayon = "1.10"

# Dev dependencies
env_logger = "0.10"
polars = { version = "0.44", default-features = false, features = ["csv"] }  # 0.52 has breaking changes
test-log = "0.2"

# Internal crates
apvd-core = { path = "apvd-core" }
