[package]
name = "apvd-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for area-proportional Venn diagrams"
repository = "https://github.com/runsascoded/shapes"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
apvd-core.workspace = true
console_error_panic_hook.workspace = true
log.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-console-logger.workspace = true
web-sys.workspace = true
